--- a/index.html
+++ b/index.html
@@ -29,85 +29,58 @@ A la izquierda puede ver la lista de proyectos.
 <div class="body">
 	<div id="proyectos">
 
-		<h3>Proyectos:<br>(clic para mostrar)</h3>
+		<h3>Proyectos:<br>(clic para ver)</h3>
 		
-		<li><button class="index_link" value="1">1 Programa de escritorio</button></li>
-		<li><button class="index_link" value="2">2 Videojuego</button></li>
-		<li><button class="index_link" value="3">3 Página web</button></li>
+		<li><button class="index_link" value="1">1 "Impresora" para ciegos</button></li>
+		<li><button class="index_link" value="2">2 Videojuegos</button></li>
+		<li><button class="index_link" value="3">3 Programa para escritores</button></li>
+		<li><button class="index_link" value="4">4 Página web</button></li>
 		<li><button class="index_link" value=""> Más próximamente...</a></li>
 
 		<h3><a href="#footer">Contacto</a></h3>
-		
-		<!--
-		<li><a class="index_link" href="#muestra_1">1 Programa de escritorio</a></li>
-		<li><a class="index_link" href="#muestra_2">2 Videojuego</a></li>
-		<li><a class="index_link" href="#muestra_3">3 Pagina web</a></li>
-		<li><a class="index_link"> 4 Proximamente...</a></li>
-		-->
 	</div>
 
 
 
 	<div id ="conteiner_muestras">
 		<div id="muestra_1" class="muestra">
-			<h class="titulo_proyecto">1 Programa de escritorio</h>
-			<p>Los libros interactivos son exportados por el programa en formato de página html. 
-			Están estilizados con css y tienen un comando de javascript para agregarle más suavidad 
-			a las transiciones entre páginas. 
-			El programa está hecho con el lenguaje python.</p>
+			<h class="titulo_proyecto"> 1 "Impresora" para ciegos </h>
+			<p>Mi primer programa permite hacer dibujos e imprimirlos mediante un aparato especial. Así los alumnos con ceguera podrán analizar la hoja con el tacto.</p>
 
-			<p>La apariencia del programa se adapta a la apariencia del SO del usuario.</p>
-			<img src="imagenes\python\programa.png" alt="el programa" height="49%" width="49%">
-			
-			<img src="imagenes\python\estilo_2.png" alt="programa con otro estilo" height="49%" width="49%"><br>
-
-			<p>Los libros exportados pueden verse sin accesos a internet. Esta es una imagen de una página de ejemplo.</p>
-			<img src="imagenes\python\pagina_exportada.png" alt="" height="60%" width="60%"><br>
 			<p>
-			Como el libro es exportado en formato html puede publicarse como una página web 
-			estática sin necesidad de agregarle nada más. Puede ver un ejemplo haciendo 
-			clic <a href="libro_ejemplo/index.html">aquí</a>.
+			Tecnologías utilizadas:<br>
+			- C++ (principalmente)<br>
+			- SDL<br>
+			- GitHub<br>
+			- Arduino<br>
 			</p>
 
-			<!--<h3>A continuacion se explican las funciones de manera general del programa, es algo extensa asi que si no tiene tiempo le recomendaria continuar viendo los otros proyectos. </h3>-->
-			<p><!--Para poder usar el programa primero se necesita abrir un proyecto, pero antes de eso veamos por arriba las frunciones que tiene.--></p>
+			<p>El programa.</p>
+			(imagen)
+			<!--<img src="imagenes\" height="50%" width="50%">-->
 
-			<p><!--Este es el menu de edicion. Si se usa el boton "editar" se abrira el texto de esa pagina en el editor por defecto del usuario.--></p>
-
-			<!--<img src="imagenes\python\menu_edicion.png" alt="menu de edicion"><br>
-			<p>Esta es la interfaz para cambiar de pagina</p>
-			<img src="imagenes\python\cambiar_de_escena.png" alt=""><br>
-			<p>esta es la barra para seleccionar la pagina siguiente. Como la primera pagina solo tiene una opcion la barra aparece desactivada.</p>
-			<img src="imagenes\python\barra_desactivada.png" alt=""><br>-->
-
-			<!--<p>ahora vamos a el menu</p>
-			<img src="imagenes\python\barra_de_menu.png" alt="barra de menu"><br>
-			<p>Como no tenemos un proyecto guardado abrimos uno nuevo.</p>
-			<img src="imagenes\python\opcion_nuevo.png" alt=""><br>
-			<p>elegimos una carpeta (preferentemente vacia)</p>
-			<img src="imagenes\python\crear_nuevo.png" alt="" height="75%" width="75%"><br>-->
-			<p>Cuando se crea un proyecto nuevo, se generan los siguientes archivos. 
-			Si se quiere abrir el proyecto solo se necesita seleccionar el archivo "inicio.dat".</p>
-			<img src="imagenes\python\archivos_generados.png" alt="" height="25%" width="25%"><br>
-			<!--
-			<p></p>
-			<img src="imagenes\python\escena_actual.png" alt=""><br>
-			<p></p>
-			<img src="imagenes\python\barra_destinos.png" alt=""><br>
-			<p></p>
-			<img src="imagenes\python\opcion_exportar.png" alt=""><br>
-			<p></p>
-			-->
-			<p>Y cuando se exporta se generan estos. Se puede leer el libro sin conexión a internet 
-			simplemente abriendo el archivo "iniciar".</p>
-			<img src="imagenes\python\archivos_exportar.png" alt=""><br>
-
+			<p>Placa que controlada a la impresora.</p>
+			(imagen)
+			<!--<img src="imagenes\" height="50%" width="50%">-->
 		</div>
 		<div id="muestra_2" class="muestra">
-			<h class="titulo_proyecto"> 2 Videojuego </h>
-			<p>Mi segundo proyecto de muestra es un juego de desplazamiento horizontal. A diferencia 
-			del proyecto anterior fue hecho usando un editor de texto, para este tuve que aprender a 
-			usar un programa. Esta hecho con el motor de juegos Godot usando el lenguaje GDscript.</p>
+			<h class="titulo_proyecto"> 2 Videojuegos </h>
+			<p>Mi segundo proyecto de muestra son 2 juegos hechos con Godot.
+			Uno de desplazamiento horizontal y otro en vertical.</p>
+
+			<p>
+			Tecnologías utilizadas:<br>
+			- Motor Godot (principalmente)<br>
+			- GDscript<br>
+			- GitHub<br>
+			</p>
+
+			<p>Juego 1</p>
+			(imagen)
+			<p>Juego 2 (en proceso)</p>
+			(imagen)
+			<!--<img src="imagenes\juego\2.png" height="50%" width="50%">-->
+
 			<h3>links:</h3>
 			<a href="https://github.com/Tomas-Garcilazo/Inside-xirtam/tree/master/inside_XIRTAM/scripts">
 				El código en mi Github.</a>
@@ -115,49 +88,46 @@ A la izquierda puede ver la lista de proyectos.
 			<a href="https://gamejolt.com/games/Inside-XIRTAM/454426">
 				El juego publicado en GameJolt.
 			</a>
-			<br><br>
-			<p>Imágenes del juego:</p>
-			<img src="imagenes\juego\1.png" height="50%" width="50%">
-			<!--<img src="imagenes\juego\2.png" height="50%" width="50%">-->
-			<img src="imagenes\juego\3.png" height="50%" width="50%">
 
 
 		</div>
+
 		<div id="muestra_3" class="muestra">
-			<h class="titulo_proyecto"> 3 Página web </h>
-			<p>Mi tercer proyecto de muestra es esta misma página que está viendo. 
-			La página esta hospedada en <a href="https://www.netlify.com"> https://www.netlify.com</a>. 
-			Utiliza javascript, html y css. Todo lo que se ve en ella fue un trabajo hecho por mí.
+			<h class="titulo_proyecto">3 Programa para escritores</h>
+			<p>Mi tercer programa básicamente permite manejar y exportar historias 'interactivas' que tengan varios finales.</p>
+
+			<p>
+			Tecnologías utilizadas:<br>
+			- Python (principalmente)<br>
+			- Tkinter<br>
+			- Html<br>
+			- Css<br>
+			- JavaScript<br>
+			- GitHub<br>
 			</p>
-			<br>
-			<div id="finalizar">
-				<h2> Para finalizar: </h2>
-				<p>Me gustaría comunicar al lector que lo que busco con estas 3 demostraciones de 
-				proyectos no es destacar los conocimientos de las tecnologías utilizadas, sino una 
-				variedad de cualidades personales que considero más importantes como:
-				</p>
-				<p>Capacidad adaptativa: son 3 proyectos muy diferentes entre si y emplean diferentes tecnologías. 
-				Siempre estoy dispuesto a aprender y/o capacitarme.
-				<br>
-				Compromiso: Hacer toda esta demostración requiere considerable tiempo y dedicación.
-				<br>
-				Proactividad: Puedo no tener experiencia laboral en el campo, pero no me quede esperando e hice todo 
-				esto para aumentar mis chances.
+
+			<p>programa:</p>
+			<img src="imagenes\python\estilo_2.png" alt="programa con otro estilo" height="49%" width="49%"><br>
+
+			<p>Así es como se vería una página exportada. Puede abrirse con cualquier explorador de internet pero no necesita conexión.</p>
+			<img src="imagenes\python\pagina_exportada.png" alt="" height="60%" width="60%"><br>
+		</div>
 
 
-				<br><br>
-				Esos fueron todos los proyectos completados que tengo para mostrar por ahora. 
-				Hasta acá llega mi presentación, muchas gracias por su tiempo.
-				</p>
+		<div id="muestra_4" class="muestra">
+			<h class="titulo_proyecto"> 4 Página web </h>
+			<p>Mi último proyecto de muestra es esta misma página. Esta hospedada en <a href="https://www.netlify.com">https://www.netlify.com</a>.</p>
+			
+			<p>
+			Tecnologías utilizadas:<br>
+			- Html<br>
+			- Css<br>
+			- JavaScript<br>
+			- GitHub<br>
+			</p>
 
-			</div>
+			<p>Eso fue todo, gracias por su tiempo.</p>
 	</div>
-		<br><br>
-		<br><br>
-		<br><br>
-		<br><br>
-		<br><br>
-		<br><br>
 	</div>
 </div>
 
