agregadas las imagenes de la impresora

--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@ A la izquierda puede ver la lista de proyectos.
 	<div id ="conteiner_muestras">
 		<div id="muestra_1" class="muestra">
 			<h class="titulo_proyecto"> 1 "Impresora" para ciegos </h>
-			<p>Mi primer programa permite hacer dibujos e imprimirlos mediante un aparato especial. Así los alumnos con ceguera podrán analizar la hoja con el tacto.</p>
+			<p>Este programa permite hacer dibujos e imprimirlos mediante un aparato especial. Así los alumnos con ceguera pueden analizar las hojas con el tacto. Es un trabajo en equipo y continúa en desarrollo.</p>
 
+			<br>
 			<p>
 			Tecnologías utilizadas:<br>
+			<br>
 			- C++ (principalmente)<br>
 			- SDL<br>
 			- GitHub<br>
 			- Arduino<br>
 			</p>
+			
+			<p>El programa:</p>
+			<img src="imagenes\impresora\programa_con_diagrama.png" height="50%" width="50%">
 
-			<p>El programa.</p>
-			(imagen)
-			<!--<img src="imagenes\" height="50%" width="50%">-->
-
-			<p>Placa que controlada a la impresora.</p>
-			(imagen)
-			<!--<img src="imagenes\" height="50%" width="50%">-->
+			<p>Placa que controla a la impresora:</p>
+			<img src="imagenes\impresora\placa.png" height="35%" width="35%">
 		</div>
 		<div id="muestra_2" class="muestra">
 			<h class="titulo_proyecto"> 2 Videojuegos </h>
@@ -70,6 +70,7 @@ A la izquierda puede ver la lista de proyectos.
 
 			<p>
 			Tecnologías utilizadas:<br>
+			<br>
 			- Motor Godot (principalmente)<br>
 			- GDscript<br>
 			- GitHub<br>
@@ -77,7 +78,7 @@ A la izquierda puede ver la lista de proyectos.
 
 			<p>Juego 1</p>
 			(imagen)
-			<p>Juego 2 (en proceso)</p>
+			<p>Juego 2 (En desarrollo)</p>
 			(imagen)
 			<!--<img src="imagenes\juego\2.png" height="50%" width="50%">-->
 
@@ -98,6 +99,7 @@ A la izquierda puede ver la lista de proyectos.
 
 			<p>
 			Tecnologías utilizadas:<br>
+			<br>
 			- Python (principalmente)<br>
 			- Tkinter<br>
 			- Html<br>
@@ -120,6 +122,7 @@ A la izquierda puede ver la lista de proyectos.
 			
 			<p>
 			Tecnologías utilizadas:<br>
+			<br>
 			- Html<br>
 			- Css<br>
 			- JavaScript<br>
