editados varops textos el index

--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@ A la izquierda puede ver la lista de proyectos.
 
 			<p>Placa que controla a la impresora:</p>
 			<img src="imagenes\impresora\placa.png" height="35%" width="35%">
+
+			<br>
+			<br>
+
+			<a href="https://github.com/Tomas-Garcilazo/programa-brazo-mecanico/">Repositorio en Github.</a>
+
+
 		</div>
 		<div id="muestra_2" class="muestra">
 			<h class="titulo_proyecto"> 2 Videojuegos </h>
@@ -76,15 +83,17 @@ A la izquierda puede ver la lista de proyectos.
 			- GitHub<br>
 			</p>
 
-			<p>Juego 1</p>
-			(imagen)
-			<p>Juego 2 (En desarrollo)</p>
-			(imagen)
-			<!--<img src="imagenes\juego\2.png" height="50%" width="50%">-->
+			<p>Juego 1: </p>
+			<img src="imagenes\juego\2.png" height="40%" width="40%">
+			<p>(En desarrollo) Juego 2:</p>
+			<img src="imagenes\juego\retro_biker_1.png" height="35%" width="35%">
+			<img src="imagenes\juego\retro_biker_2.png" height="35%" width="35%">
 
-			<h3>links:</h3>
+			<br>
+			
+			<p>links del primer juego:</p>
 			<a href="https://github.com/Tomas-Garcilazo/Inside-xirtam/tree/master/inside_XIRTAM/scripts">
-				El código en mi Github.</a>
+				El código en Github.</a>
 			<br>
 			<a href="https://gamejolt.com/games/Inside-XIRTAM/454426">
 				El juego publicado en GameJolt.
@@ -95,7 +104,7 @@ A la izquierda puede ver la lista de proyectos.
 
 		<div id="muestra_3" class="muestra">
 			<h class="titulo_proyecto">3 Programa para escritores</h>
-			<p>Mi tercer programa básicamente permite manejar y exportar historias 'interactivas' que tengan varios finales.</p>
+			<p>Mi tercer programa permite crear, editar y exportar textos 'interactivos'. Por ejemplo: libros con más de un final.</p>
 
 			<p>
 			Tecnologías utilizadas:<br>
@@ -111,8 +120,13 @@ A la izquierda puede ver la lista de proyectos.
 			<p>programa:</p>
 			<img src="imagenes\python\estilo_2.png" alt="programa con otro estilo" height="49%" width="49%"><br>
 
-			<p>Así es como se vería una página exportada. Puede abrirse con cualquier explorador de internet pero no necesita conexión.</p>
+			<p>Así es como se vería una página exportada. Puede abrirse con cualquier explorador de internet aunque no necesita conexión.</p>
+
 			<img src="imagenes\python\pagina_exportada.png" alt="" height="60%" width="60%"><br>
+
+			<br><br>
+
+			<a href="https://github.com/Tomas-Garcilazo/Creador-de-Historias">Repositorio en Github.</a>
 		</div>
 
 
@@ -128,6 +142,10 @@ A la izquierda puede ver la lista de proyectos.
 			- JavaScript<br>
 			- GitHub<br>
 			</p>
+
+			<p><a href="https://github.com/Tomas-Garcilazo/web-presentacion-proyectos">Repositorio en Github.</a></p>
+
+			<br><br>
 
 			<p>Eso fue todo, gracias por su tiempo.</p>
 	</div>
