saque un proyecto y cambie el orde de otros 2

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ A la izquierda puede ver la lista de proyectos.
 		
 		<li><button class="index_link" value="1">1 "Impresora" para ciegos</button></li>
 		<li><button class="index_link" value="2">2 Programa para escritores </button></li>
-		<li><button class="index_link" value="3">3 Videojuegos</button></li>
-		<li><button class="index_link" value="4">4 Página web</button></li>
+		<!--<li><button class="index_link" value="3">3 Videojuegos</button></li>-->
+		<li><button class="index_link" value="3">3 Página web</button></li>
 		<li><button class="index_link" value=""> Más próximamente...</a></li>
 
 		<h3><a href="#footer">Contacto</a></h3>
@@ -43,8 +43,8 @@ A la izquierda puede ver la lista de proyectos.
 
 
 	<div id ="conteiner_muestras">
-		<div id="muestra_1" class="muestra">
-			<h class="titulo_proyecto"> 1 "Impresora" para ciegos </h>
+		<div id="muestra_2" class="muestra">
+			<h class="titulo_proyecto"> 2 "Impresora" para ciegos </h>
 			<p>Este programa permite hacer dibujos e imprimirlos mediante un aparato especial. Así los alumnos con ceguera pueden analizar las hojas con el tacto. Es un trabajo en equipo y continúa en desarrollo.</p>
 
 			<br>
@@ -70,6 +70,7 @@ A la izquierda puede ver la lista de proyectos.
 
 
 		</div>
+		<!--
 		<div id="muestra_3" class="muestra">
 			<h class="titulo_proyecto"> 3 Videojuegos </h>
 			<p>Mi segundo proyecto de muestra son 2 juegos hechos con Godot.
@@ -98,13 +99,12 @@ A la izquierda puede ver la lista de proyectos.
 			<a href="https://gamejolt.com/games/Inside-XIRTAM/454426">
 				El juego publicado en GameJolt.
 			</a>
-
-
 		</div>
+		-->
 
-		<div id="muestra_2" class="muestra">
-			<h class="titulo_proyecto">2 Programa para escritores</h>
-			<p>Mi tercer programa permite crear, editar y exportar textos 'interactivos'. Por ejemplo: libros con más de un final.</p>
+		<div id="muestra_1" class="muestra">
+			<h class="titulo_proyecto">1 Programa para escritores</h>
+			<p>Este programa permite crear, editar y exportar textos 'interactivos'. Por ejemplo: libros con más de un final.</p>
 
 			<p>
 			Tecnologías utilizadas:<br>
@@ -130,8 +130,8 @@ A la izquierda puede ver la lista de proyectos.
 		</div>
 
 
-		<div id="muestra_4" class="muestra">
-			<h class="titulo_proyecto"> 4 Página web </h>
+		<div id="muestra_3" class="muestra">
+			<h class="titulo_proyecto"> 3 Página web </h>
 			<p>Mi último proyecto de muestra es esta misma página. Esta hospedada en <a href="https://www.netlify.com">https://www.netlify.com</a>.</p>
 			
 			<p>
